# recognize_realnumbers

tf_pic_real/: .project
tf_pic_real/src/: bin_con_pic.py  cnn_iden_pic.py  imageCapreal  pic_con_bin.py  readme  tfcnn_IdenRealPic_main.py
tf_pic_real/src/ros_kinect/: readme
tf_pic_real/src/ros_kinect/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
tf_pic_real/src/ros_kinect/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
tf_pic_real/src/ros_kinect/devel/share/image/cmake/: imageConfig.cmake
tf_pic_real/src/ros_kinect/src/image/: CMakeLists.txt  package.xml
tf_pic_real/src/ros_kinect/src/image/src/: imageCapRec.cpp  imageCapreal.cpp  imageCapture.cpp
